# self-editing-ai

./: README.md  __init__.py  pyproject.toml
docker/: Dockerfile  docker-compose.yml
scripts/: run_loop.py  seed_memory.py
src/: api_server.py  cli.py  config.py
src/agent/: __init__.py  edits.py  loop.py  memory.py  policies.py  tests_runner.py  tools.py
src/prompts/: editor.md  planner.md  reviewer.md
tests/: test_self_edits.py  test_smoke.py
